7th commit of index.html file of portfolio - added marquee

--- a/index.html
+++ b/index.html
@@ -139,11 +139,14 @@
     </style>
 </head>
 <body>
+	<marquee bgcolor="lightgray" scrollamount="12">
+       <i><b><center>Webpage is best viewed on desktop. Turn on "Destop Site" if viewing from smartphone.</b></center></i>
+   </marquee>
     <div class="container">
         <div class="header-overlay">
             <div class="header-content">
                 <div class="profile-info">
-                    <img src="https://uc68a87da97729377d75b6eb8ae5.previews.dropboxusercontent.com/p/thumb/ACXWUzyMtBz75qgNrlKg7ouUfBximbyWIBHnYFrUiNF3t-acfAXt5mDmfM0_gso58AEyr4Xx7yJJ6UpQXT2q5TRY_fN6kOEoAtPr-_gnPfqwB-lsbgFCalMn_qG0GBpy4DAA5DXat8eHA-C2tzieHvv2ooZMqPhPWwP3Dof5cA-A3JqGPDTf-9_WqDrrode7rTKH5XKbP_iJshsBBaKCf3TGUykYg1XE2PO5Sp4D-AL0qFsZ1KeK6PaSdrIOC7N4wyRlrGVEGZuQF5ebAI5mL7MoXfTFlCI9omHYhARzp07WaSokmRA06OadxRmJZmCbE4ynAQA7i-uitntV1XIvXNQ7PzMD4wL063so4HKiMQjhRcFgnBcGGGwDsKJitGTqTDiSiTy-cZva0X0fF2d5KsFA/p.jpeg?is_prewarmed=true/150" alt="Archit Bidkar" class="profile-pic">
+                    <img src="https://uc68a87da97729377d75b6eb8ae5.previews.dropboxusercontent.com/p/thumb/ACXvfguShni62eVDDYbwNOg6TlOJG9-YB92wa9gziQwOjs5elxrsIS2lrdw44oOcVtahFSf1BuaDrwVGNqeEvVoCHpMRlpQdlKZPPnCjol27E92DrqdvtFWCSaEpn2YUKR7ntpgrR6In6io6szPsj3LNvGl_BjFhiHcEvn8-i0Vc8rhKdlForRt5XJm_q-t3j6-Ex9TP9gaBM4XI3D8b_RWTETT0QlfRulDHs9Ft5--8WLjIlZu5PWO48TJT3iaWbEyFFVmWnIsBB13FEiONISZln-X3RLQICBNhzokPdZ_hA3xeKyJo5IxoTy_pKF3bj3bm3frZaJXjLhnWUlbPjg5egt_uCdqgPaHXnGTxeGE1FMU6C9wOEF1VKdSnPaAMBjaMQ51uPcKkwR9oueCPHYpt/p.jpeg?is_prewarmed=true/150" alt="Archit Bidkar" class="profile-pic">
                     <div class="name-title">
                         <h1>Archit Bidkar</h1>
                         <p>AWS Cloud Engineer | Solution Architect</p>
