8th commit of index.html file of portfolio - changed pic link

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <div class="header-overlay">
             <div class="header-content">
                 <div class="profile-info">
-                    <img src="https://uc68a87da97729377d75b6eb8ae5.previews.dropboxusercontent.com/p/thumb/ACXvfguShni62eVDDYbwNOg6TlOJG9-YB92wa9gziQwOjs5elxrsIS2lrdw44oOcVtahFSf1BuaDrwVGNqeEvVoCHpMRlpQdlKZPPnCjol27E92DrqdvtFWCSaEpn2YUKR7ntpgrR6In6io6szPsj3LNvGl_BjFhiHcEvn8-i0Vc8rhKdlForRt5XJm_q-t3j6-Ex9TP9gaBM4XI3D8b_RWTETT0QlfRulDHs9Ft5--8WLjIlZu5PWO48TJT3iaWbEyFFVmWnIsBB13FEiONISZln-X3RLQICBNhzokPdZ_hA3xeKyJo5IxoTy_pKF3bj3bm3frZaJXjLhnWUlbPjg5egt_uCdqgPaHXnGTxeGE1FMU6C9wOEF1VKdSnPaAMBjaMQ51uPcKkwR9oueCPHYpt/p.jpeg?is_prewarmed=true/150" alt="Archit Bidkar" class="profile-pic">
+                    <img src="https://1drv.ms/i/c/1fb1bcde36d94e4f/EQ5MIxiTUQZMjNFd1JJt9r0BNrOvNh1l9o7hs1tXWFdLUw?e=oayxFx/150" alt="Archit Bidkar" class="profile-pic">
                     <div class="name-title">
                         <h1>Archit Bidkar</h1>
                         <p>AWS Cloud Engineer | Solution Architect</p>
