--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <div class="header-overlay">
             <div class="header-content">
                 <div class="profile-info">
-                    <img src="https://1drv.ms/i/c/1fb1bcde36d94e4f/EQ5MIxiTUQZMjNFd1JJt9r0BNrOvNh1l9o7hs1tXWFdLUw?e=oayxFx/150" alt="Archit Bidkar" class="profile-pic">
+                    <img src="https://archit-crc.s3.amazonaws.com/mypic.png" alt="Archit Bidkar" class="profile-pic">
                     <div class="name-title">
                         <h1>Archit Bidkar</h1>
                         <p>AWS Cloud Engineer | Solution Architect</p>
@@ -265,6 +265,20 @@
 					<div class="project">
 						<h3>Legacy Data Migration to S3 & Glacier</h3>
 						<p>Helped to migrate data over 20TB to AWS S3 & Glacier from third party apps for better security, fast access & cost efficiency. Reduced over 35% storage cost.</p>
+					</div>
+				</div>
+			</section>
+			
+			<section id="projects" class="section">
+				<h2>Simple Projects Deployed</h2>
+				<div class="projects-container">
+					<div class="project">
+						<h3>Host a Webpage</h3>
+						<p>A simple webpage was made available on the internet within 10 minutes of development with help of AWS service. Access the page on this <a href="https://d2yceav7x85dnv.cloudfront.net"><b>link</b></a>.</p>
+					</div>
+					<div class="project">
+						<h3>Conversion of Text-to-Speech</h3>
+						<p>With help of ML based service, transform your long texts into lifelike voices, in a variety of languages similar to human voices</p>
 					</div>
 				</div>
 			</section>
